feat: Add `sherwood new` command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tower-http = { version = "0.5", features = ["fs", "cors"] }
 anyhow = "1.0"
 serde_yaml = "0.9"
 toml = "0.8"
+include_dir = { version = "0.7", features = ["glob"] }
 
 [workspace.metadata.release]
 tag-name = "v{{version}}"
