--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["web-programming", "development-tools"]
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 pulldown-cmark = "0.9"
 tokio = { version = "1.0", features = ["full"] }
 axum = "0.7"
@@ -22,6 +23,8 @@ anyhow = "1.0"
 serde_yaml = "0.9"
 toml = "0.8"
 include_dir = { version = "0.7", features = ["glob"] }
+tera = "1.19"
+glob = "0.3"
 
 [workspace.metadata.release]
 tag-name = "v{{version}}"
