--- a/templates/simple/Cargo.toml
+++ b/templates/simple/Cargo.toml
@@ -10,3 +10,5 @@ categories = ["web-programming", "development-tools"]
 
 [dependencies]
 sherwood = "0.1.0"
+clap = { version = "4.0", features = ["derive"] }
+tokio = { version = "1.0", features = ["full"] }
