refactor: Build custom binaries to .sherwood and include generate in version control in simple template

--- a/templates/simple/.gitignore
+++ b/templates/simple/.gitignore
@@ -4,7 +4,14 @@
 
 # Sherwood
 /dist/
+## Exclude .sherwood release dir
 .sherwood/
+!.sherwood/
+.sherwood/*
+!.sherwood/release/
+.sherwood/release/*
+## ...but include the sherwood generate binary
+!.sherwood/release/generate
 
 # OS
 .DS_Store
