refactor: Allow for absence of templates and themes directories, with built-in fallbacks

--- a/docs/Sherwood.toml
+++ b/docs/Sherwood.toml
@@ -2,5 +2,5 @@
 title = "Sherwood"
 theme = "default"
 
-[templates]
-page_template = "default.stpl"
+# [templates]
+# page_template = "default.stpl"
