--- a/crates/sherwood/Cargo.toml
+++ b/crates/sherwood/Cargo.toml
@@ -24,3 +24,4 @@ toml = "0.9"
 include_dir = { version = "0.7", features = ["glob"] }
 sailfish = "0.8"
 thiserror = "1.0"
+lightningcss = "1.0.0-alpha.68"
