--- a/Sherwood.toml
+++ b/Sherwood.toml
@@ -1,3 +1,27 @@
 [site]
 theme = "default"
 # Available themes: default
+
+# [css]
+# minify = true
+# source_maps = false
+# remove_unused = false
+# nesting = true
+
+# [css.targets]
+# chrome = "103"
+# firefox = "115"
+# safari = "15"
+# edge = "127"
+
+[css]
+minify = true
+source_maps = false
+remove_unused = false
+nesting = true
+
+[css.targets]
+chrome = "103"
+firefox = "115"
+safari = "15"
+edge = "127"
