feat: Configurable CSS entry_point

--- a/Sherwood.toml
+++ b/Sherwood.toml
@@ -14,14 +14,15 @@ theme = "default"
 # safari = "15"
 # edge = "127"
 
-[css]
-minify = true
-source_maps = false
-remove_unused = false
-nesting = true
+# [css]
+# entry_point = "main.css"    # Specify custom entry point (default: "main.css")
+# minify = true
+# source_maps = false
+# remove_unused = false
+# nesting = true
 
-[css.targets]
-chrome = "103"
-firefox = "115"
-safari = "15"
-edge = "127"
+# [css.targets]
+# chrome = "103"
+# firefox = "115"
+# safari = "15"
+# edge = "127"
