--- a/crates/sherwood/Cargo.toml
+++ b/crates/sherwood/Cargo.toml
@@ -26,3 +26,4 @@ sailfish = "0.8"
 thiserror = "1.0"
 tempfile = "3.8"
 lightningcss = { version = "1.0.0-alpha.68", features = ["bundler"] }
+chrono = { version = "0.4", features = ["serde"] }
