--- a/crates/sherwood/Cargo.toml
+++ b/crates/sherwood/Cargo.toml
@@ -27,3 +27,4 @@ thiserror = "1.0"
 tempfile = "3.8"
 lightningcss = { version = "1.0.0-alpha.68", features = ["bundler"] }
 chrono = { version = "0.4", features = ["serde"] }
+gray_matter = { version = "0.3", features = ["yaml", "toml"] }
