--- a/docs/Cargo.toml
+++ b/docs/Cargo.toml
@@ -17,3 +17,6 @@ path = "src/main.rs"
 [dependencies]
 sherwood = { path = "../crates/sherwood" }
 tokio = { version = "1.0", features = ["full"] }
+anyhow = "1.0"
+toml = "0.8"
+serde_json = "1.0"
