--- a/crates/sherwood/Cargo.toml
+++ b/crates/sherwood/Cargo.toml
@@ -5,7 +5,8 @@ description.workspace = true
 authors.workspace = true
 license.workspace = true
 edition.workspace = true
-repository.workspace = true
+# repository.workspace = true
+repository = "https://github.com/thombruce/sherwood"
 homepage.workspace = true
 keywords = ["ssg", "static", "blog", "markdown", "web"]
 categories = ["web-programming", "development-tools"]
